Try to fix things

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/unrealengine
 # Edit at https://www.toptal.com/developers/gitignore?templates=unrealengine
-
+# test
 ### UnrealEngine ###
 # Visual Studio 2015 user specific files
 .vs/
