Shoulder Pop on Both sides

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,7 +8,9 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftHeavy",DevComment="")
++GameplayTagList=(Tag="Action.Neutral.Attack.LeftLight",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.RightHeavy",DevComment="")
++GameplayTagList=(Tag="Action.Neutral.Attack.RightLight",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Sprawl",DevComment="")
 +GameplayTagList=(Tag="AttackState.CanAttack",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.Jump",DevComment="")
@@ -18,7 +20,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Stamina.Regen",DevComment="")
 +GameplayTagList=(Tag="State.HandFight",DevComment="")
 +GameplayTagList=(Tag="State.Neutral",DevComment="")
@@ -28,5 +32,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Jump",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
 
