Arm Drag Attacker Can Cancel

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -35,4 +35,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
++GameplayTagList=(Tag="Trigger.Special.CancelReactionReceiver",DevComment="")
 
