--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -33,6 +33,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Jump",DevComment="")
++GameplayTagList=(Tag="Trigger.Neutral.BackStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.RightStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
