--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -34,6 +34,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Jump",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.BackStep",DevComment="")
++GameplayTagList=(Tag="Trigger.Neutral.ForwardStep",DevComment="")
++GameplayTagList=(Tag="Trigger.Neutral.LeftStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.RightStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
