A lot of bug fixed

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,6 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Neutral.Attack.RightLight",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Sprawl",DevComment="")
 +GameplayTagList=(Tag="AttackState.CanAttack",DevComment="")
++GameplayTagList=(Tag="CD.Ability.HeavyAttack",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.Jump",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.LeftArmDrag",DevComment="")
