Added stalling timer and stalling timer reset condition

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -25,6 +25,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightShoulderPop",DevComment="")
++GameplayTagList=(Tag="Stamina.Recovery",DevComment="")
 +GameplayTagList=(Tag="Stamina.Regen",DevComment="")
 +GameplayTagList=(Tag="State.ArmDragged",DevComment="")
 +GameplayTagList=(Tag="State.ArmDragged.Left",DevComment="")
