Migrated characters into Cathy's timesSquare

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=BatsToiSupreme
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/ThirdPersonBP/Maps/Cathy_TimeSquare.Cathy_TimeSquare
+GameDefaultMap=/Game/ThirdPersonBP/Maps/Cathy_TimeSquare.Cathy_TimeSquare
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
