--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,4 +102,6 @@ ManualIPAddress=
 
 [/Script/Engine.RendererSettings]
 r.SkinCache.CompileShaders=True
+r.TextureStreaming=True
+r.Streaming.PoolSize=1500
 
