Added level streaming, overlapped PlayerMap with Cathy's Timesquare

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=BatsToiSupreme
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/Cathy_TimeSquare.Cathy_TimeSquare
-GameDefaultMap=/Game/ThirdPersonBP/Maps/Cathy_TimeSquare.Cathy_TimeSquare
+EditorStartupMap=/Game/ThirdPersonBP/Maps/PlayerMap.PlayerMap
+GameDefaultMap=/Game/ThirdPersonBP/Maps/PlayerMap.PlayerMap
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
