Start of handfight

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -32,6 +32,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.ArmDragged.Right",DevComment="")
 +GameplayTagList=(Tag="State.HandFight",DevComment="")
 +GameplayTagList=(Tag="State.Neutral",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag",DevComment="")
@@ -41,6 +42,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Neutral.ForwardStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.LeftStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.RightStep",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
