Added handfight idle state

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,6 +7,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/MACS/DataModels/DT_MACS_TAGs.DT_MACS_TAGs
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Action.HandFight.Idle.Receiver",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftHeavy",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftLight",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.RightHeavy",DevComment="")
@@ -16,10 +17,13 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="AttackState.CanAttack",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.HeavyAttack",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.Jump",DevComment="")
++GameplayTagList=(Tag="Reacion.Attacker.HandFight",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.Right",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftShoulderPop",DevComment="")
