--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,6 +7,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/MACS/DataModels/DT_MACS_TAGs.DT_MACS_TAGs
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Action.HandFight.Attack",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.Idle.Receiver",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftHeavy",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftLight",DevComment="")
