The new hand fight is working

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -42,13 +42,22 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.LeftHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.RightHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
++GameplayTagList=(Tag="Trigger.Block.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Block.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Counter.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Counter.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Jump",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.BackStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.Dash",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.ForwardStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.LeftStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.RightStep",DevComment="")
++GameplayTagList=(Tag="Trigger.Neutral.Sprawl",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
@@ -58,4 +67,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelReactionReceiver",DevComment="")
++GameplayTagList=(Tag="Trigger.Special.Continue",DevComment="")
 
