process of hand fight esacpe to a second hand fight

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,6 +16,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.Neutral.Dash",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Sprawl",DevComment="")
 +GameplayTagList=(Tag="AttackState.CanAttack",DevComment="")
++GameplayTagList=(Tag="Attribute.Invicible",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.HeavyAttack",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.Jump",DevComment="")
 +GameplayTagList=(Tag="Reacion.Attacker.HandFight",DevComment="")
