HANDFIGHT TOTAL REVAMP HELL YEAH

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -22,12 +22,14 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reacion.Attacker.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HF_LeftWristGrab",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.HF_RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.Right",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HF_LeftWristGrab",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.HF_RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.LeftShoulderPop",DevComment="")
@@ -40,6 +42,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.ArmDragged.Right",DevComment="")
 +GameplayTagList=(Tag="State.HandFight",DevComment="")
 +GameplayTagList=(Tag="State.Neutral",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.Blocked.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
@@ -66,7 +69,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
++GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelReactionReceiver",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.Continue",DevComment="")
 
