struggle use stamina now

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -74,4 +74,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelReactionReceiver",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.Continue",DevComment="")
++GameplayTagList=(Tag="Trigger.Special.Struggle",DevComment="")
 
