process of dash then attack

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -43,6 +43,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.HandFight",DevComment="")
 +GameplayTagList=(Tag="State.Neutral",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.Blocked.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.Dash.LeftWristGrab",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.Dash.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
