stamina changes in progress

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -48,9 +48,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag2",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag2",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.LeftArmDrag",DevComment="")
@@ -67,9 +69,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag2",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag2",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
