--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -78,6 +78,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
++GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelReactionReceiver",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.Continue",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.Struggle",DevComment="")
