bug fixed, new counter

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -20,6 +20,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attribute.Invicible",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.HeavyAttack",DevComment="")
 +GameplayTagList=(Tag="CD.Ability.Jump",DevComment="")
++GameplayTagList=(Tag="Counter.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Counter.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reacion.Attacker.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HF_LeftWristGrab",DevComment="")
@@ -36,6 +38,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightShoulderPop",DevComment="")
++GameplayTagList=(Tag="Special.Miss",DevComment="")
 +GameplayTagList=(Tag="Stamina.Recovery",DevComment="")
 +GameplayTagList=(Tag="Stamina.Regen",DevComment="")
 +GameplayTagList=(Tag="State.ArmDragged",DevComment="")
