--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -74,10 +74,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag2",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.LeftHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag2",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.RightHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
