--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6E800DB241C116DEB4BD02B0F89C19FE
-ProjectName=Third Person BP Game Template
+ProjectName=TekFall
+ProjectVersion=0.1.0.0
+CompanyName=Batstoi
+bAllowWindowResize=False
 
 [StartupActions]
 bAddPacks=True
@@ -27,7 +30,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="E:/Unreal Projects")
+StagingDirectory=(Path="E:/Unreal Projects/Tekfall Demo/Windows")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -109,6 +112,7 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 -IniSectionBlacklist=HordeStorageServers
 +IniSectionBlacklist=HordeStorageServers
++MapsToCook=(FilePath="PlayerMap")
 +DirectoriesToAlwaysCook=(Path="/Game/Cinematics/Sequences/RenzoReel/RenzoReelMaster")
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
