New Character working

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,4 +104,5 @@ ManualIPAddress=
 r.SkinCache.CompileShaders=True
 r.TextureStreaming=True
 r.Streaming.PoolSize=1500
+r.SkinCache.SceneMemoryLimitInMB=200.000000
 
