--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,9 +26,10 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/BatsToiSupreme")
 AssetManagerClassName=/Script/GASCompanion.GSCAssetManager
 bSmoothFrameRate=True
-SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=60.000000))
-bUseFixedFrameRate=True
-FixedFrameRate=60.000000
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=15.000000),UpperBound=(Type=Exclusive,Value=30.000000))
+bUseFixedFrameRate=False
+FixedFrameRate=30.000000
+MinDesiredFrameRate=25.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -107,7 +108,7 @@ r.SkinCache.CompileShaders=True
 r.TextureStreaming=True
 r.Streaming.PoolSize=1500
 r.SkinCache.SceneMemoryLimitInMB=200.000000
-r.RayTracing=True
+r.RayTracing=False
 r.RayTracing.Shadows=True
 r.RayTracing.UseTextureLod=True
 
