Changed input detection so that keyboard and first controller are both bound to Player 1

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -122,3 +122,6 @@ PerPlatformBuildTarget=()
 +Definitions=(MenuPath="Common|Melee",BaseName="Melee",ParentClass=Class'"/Script/GASCompanion.GSCGameplayAbility_MeleeBase"',AssetPrefix="GA_",TooltipText=NSLOCTEXT("GASCompanionEditor", "GA_GSC_Melee_Base_Tooltip", "Melee Ability with combo capabilities.\n\nDefine a list of Montages to play and setup the Combo Notify States in Montages"))
 +Definitions=(MenuPath="",BaseName="",ParentClass=Class'"/Script/GASCompanion.GSCGameplayAbility_MeleeBase"',AssetPrefix="GA_",TooltipText="Tooltip")
 
+[/Script/CommonInput.CommonInputSettings]
+bAllowOutOfFocusDeviceInput=True
+
