--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -59,6 +59,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag2",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftArmDrag",DevComment="")
@@ -82,6 +83,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.RightHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
