update to new unreal version
Updates the project to version 5.1.1, deleted and replaced the plugins for iclone and character creator and added to characters with singlets and new shaders

--- a/Plugins/RLLiveLink/Content/iCloneConfig.json
+++ b/Plugins/RLLiveLink/Content/iCloneConfig.json
@@ -189,6 +189,23 @@
     "N_NG",
     "R"
   ],
+  "IC8OldViseme": [
+    "EE",
+    "Er",
+    "IH",
+    "Ah",
+    "Oh",
+    "W_OO",
+    "S_Z",
+    "Ch_J",
+    "F_V",
+    "TH",
+    "T_L_D_N",
+    "B_M_P",
+    "K_G_H_NG",
+    "AE",
+    "R"
+  ],
   "CC4Viseme": [
     "V_Open",
     "V_Explosive",
