New Stamina system

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -38,6 +38,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Receiver.LeftShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightShoulderPop",DevComment="")
++GameplayTagList=(Tag="Special.DrainedOut",DevComment="")
 +GameplayTagList=(Tag="Special.Miss",DevComment="")
 +GameplayTagList=(Tag="Stamina.Recovery",DevComment="")
 +GameplayTagList=(Tag="Stamina.Regen",DevComment="")
