Changed game tags of HandFight_HighC_A & HandFight_HighC_R

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -50,6 +50,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.Blocked.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.Dash.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.Dash.RightWristGrab",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.HandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
@@ -72,6 +73,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Neutral.LeftStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.RightStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.Sprawl",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.HandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
