--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -62,10 +62,13 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.UnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Counter.LeftHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Trigger.Counter.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Jump",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.BackStep",DevComment="")
 +GameplayTagList=(Tag="Trigger.Neutral.Dash",DevComment="")
@@ -87,6 +90,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.UnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
