--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -55,14 +55,17 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag2",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.LeftHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.LeftUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag2",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.RightHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd",DevComment="")
-+GameplayTagList=(Tag="Trigger.Attacker.UnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftArmDrag",DevComment="")
@@ -81,16 +84,19 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag2",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.LeftHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.LeftUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag2",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.RightHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightShoulderPop",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd",DevComment="")
-+GameplayTagList=(Tag="Trigger.Receiver.UnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
