--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -70,6 +70,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Block.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Counter.PerfectIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Jump",DevComment="")
