PCounter UI bug fix

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -112,3 +112,6 @@ r.RayTracing=False
 r.RayTracing.Shadows=True
 r.RayTracing.UseTextureLod=True
 
+[/Script/AIModule.AISystem]
+bEnableDebuggerPlugin=True
+
