some game mode changes & heavy snap upon no-input collar tie disengagement

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -24,6 +24,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Counter.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reacion.Attacker.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HandFight",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.HeavySnap",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HF_LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HF_RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HighCTakeDown",DevComment="")
@@ -31,6 +32,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Attacker.Right",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HandFight",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.HeavySnap",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HF_LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HF_RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.HighCTakeDown",DevComment="")
@@ -52,6 +54,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.Dash.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HandFightIdle",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.HeavySnap",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag2",DevComment="")
@@ -82,6 +85,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Neutral.Sprawl",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HandFightIdle",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.HeavySnap",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.HighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftArmDrag2",DevComment="")
@@ -101,6 +105,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
++GameplayTagList=(Tag="Trigger.Special.CancelBothAnimationWithSnap",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelReactionReceiver",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.Continue",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.StallingDisEngage",DevComment="")
