Renamed WinStruggle && LoseStruggle abilities to have different subversions
HandFight Struggle would trigger WinStruggle_HandFight && LoseStruggle_HandFight
HighC Struggle would trigger WinStruggle_HighC && LoseStruggle_HighC

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -71,6 +71,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.HandFight",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.HighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftArmDrag",DevComment="")
@@ -106,6 +108,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.RightUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.HandFight",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.HighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
