A section of the GameState_LocalMultiplayer must be disconnected to package a fully functioning build

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode_2.ThirdPersonGameMode_2_C
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode_LocalMultiplayer.ThirdPersonGameMode_LocalMultiplayer_C
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
 
