--- a/BatsToiSupreme_Real.uproject
+++ b/BatsToiSupreme_Real.uproject
@@ -53,7 +53,7 @@
 		},
 		{
 			"Name": "RLLiveLink",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/f6a79afa7d0e4d429be8b993f7b6f5ad"
 		},
 		{
