--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -73,6 +73,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.HandFight",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.HighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.LeftHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.StruggleEnd.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Block.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Trigger.Counter.LeftArmDrag",DevComment="")
@@ -110,6 +112,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.HandFight",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.HighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.LeftHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
