Implemented LeftTopBottom Idle abilities and animation montages

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -62,6 +62,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Attacker.LeftArmDrag2",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftHighC",DevComment="")
++GameplayTagList=(Tag="Trigger.Attacker.LeftTopBottom.Idle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Attacker.RightArmDrag",DevComment="")
@@ -100,6 +101,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.LeftHandFightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftHighCTakeDown",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftShoulderPop",DevComment="")
++GameplayTagList=(Tag="Trigger.Receiver.LeftTopBottom.Idle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftUnstoppableTD",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.LeftWristGrab",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.RightArmDrag",DevComment="")
